--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,6 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 
-RUN npx prisma generate
+# RUN npx prisma generate
 
-EXPOSE 3001
 CMD ["npm", "run", "start"]
