--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,9 @@
+worker_processes 1;
+
+events {
+    worker_connections 1024;
+}
+
 http {
   server {
       listen 80;
@@ -5,11 +11,19 @@ http {
       # フロントエンドのリクエストはNext.jsへ
       location / {
           proxy_pass http://nextjs:3000;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
       }
 
-      # /api/以下のリクエストはDjangoへ
+      # /api/以下のリクエストはfastifyへ
       location /api/ {
-          proxy_pass http://django:8000;
+          proxy_pass http://fastify:3001;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
       }
   }
 }
