--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   fastify:
     build:
@@ -13,6 +11,8 @@ services:
     volumes:
       - ./backend:/app
     command: npm run dev
+    networks:
+      - app-network
 
   nextjs:
     build:
@@ -26,17 +26,21 @@ services:
     volumes:
       - ./frontend:/app
     command: npm run dev
+    networks:
+      - app-network
 
   postgres:
     image: postgres:14
     ports:
-      - "5433:5433"
+      - "5433:5432"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
 
   nginx:
     build:
@@ -48,6 +52,12 @@ services:
       - fastify
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
