--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,9 +18,14 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
+    "@fastify/swagger": "^9.0.0",
+    "@fastify/swagger-ui": "^5.0.1",
     "@prisma/client": "^5.19.1",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
-    "prisma": "^5.19.1"
+    "fastify-zod": "^1.4.0",
+    "prisma": "^5.19.1",
+    "zod": "^3.23.8"
   }
 }
